crates/ruff_python_parser/tests/snapshots/invalid_syntax@yield_from_in_async_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/yield_from_in_async_function.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..28,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..27,
                    is_async: true,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 10..11,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 11..13,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 15..27,
                                value: YieldFrom(
                                    ExprYieldFrom {
                                        node_index: NodeIndex(None),
                                        range: 15..27,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 26..27,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | async def f(): yield from x
  |                ^^^^^^^^^^^^ Syntax Error: `yield from` statement in async function; use `async for` instead
  |
