crates/ruff_python_parser/tests/snapshots/invalid_syntax@yield_outside_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/yield_outside_function.py
---
## AST

```
Module(
    ModModule {
        range: 0..65,
        body: [
            Expr(
                StmtExpr {
                    range: 0..7,
                    value: Yield(
                        ExprYield {
                            range: 0..7,
                            value: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 6..7,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 8..20,
                    value: YieldFrom(
                        ExprYieldFrom {
                            range: 8..20,
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 19..20,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 21..28,
                    value: Await(
                        ExprAwait {
                            range: 21..28,
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 27..28,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 29..34,
                    value: Yield(
                        ExprYield {
                            range: 29..34,
                            value: None,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 35..64,
                    value: ListComp(
                        ExprListComp {
                            range: 35..64,
                            elt: Yield(
                                ExprYield {
                                    range: 37..44,
                                    value: Some(
                                        Name(
                                            ExprName {
                                                range: 43..44,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 46..63,
                                    target: Name(
                                        ExprName {
                                            range: 50..51,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Call(
                                        ExprCall {
                                            range: 55..63,
                                            func: Name(
                                                ExprName {
                                                    range: 55..60,
                                                    id: Name("range"),
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 60..63,
                                                args: [
                                                    NumberLiteral(
                                                        ExprNumberLiteral {
                                                            range: 61..62,
                                                            value: Int(
                                                                3,
                                                            ),
                                                        },
                                                    ),
                                                ],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | yield 1
  | ^^^^^^^ Syntax Error: `yield` statement outside of a function
2 | yield from 1
3 | await 1
  |


  |
1 | yield 1
2 | yield from 1
  | ^^^^^^^^^^^^ Syntax Error: `yield from` statement outside of a function
3 | await 1
4 | yield
  |


  |
2 | yield from 1
3 | await 1
4 | yield
  | ^^^^^ Syntax Error: `yield` statement outside of a function
5 | [(yield x) for x in range(3)]
  |


  |
3 | await 1
4 | yield
5 | [(yield x) for x in range(3)]
  |   ^^^^^^^ Syntax Error: `yield` statement outside of a function
  |
