crates/ruff_python_parser/tests/snapshots/valid_syntax@all_async_comprehension_py310.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/all_async_comprehension_py310.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..126,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 44..125,
                    is_async: true,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("test"),
                        range: 54..58,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 58..60,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Return(
                            StmtReturn {
                                node_index: NodeIndex(None),
                                range: 62..125,
                                value: Some(
                                    ListComp(
                                        ExprListComp {
                                            node_index: NodeIndex(None),
                                            range: 69..125,
                                            elt: ListComp(
                                                ExprListComp {
                                                    node_index: NodeIndex(None),
                                                    range: 70..100,
                                                    elt: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 71..72,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    generators: [
                                                        Comprehension {
                                                            range: 73..99,
                                                            node_index: NodeIndex(None),
                                                            target: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 83..84,
                                                                    id: Name("x"),
                                                                    ctx: Store,
                                                                },
                                                            ),
                                                            iter: Call(
                                                                ExprCall {
                                                                    node_index: NodeIndex(None),
                                                                    range: 88..99,
                                                                    func: Name(
                                                                        ExprName {
                                                                            node_index: NodeIndex(None),
                                                                            range: 88..96,
                                                                            id: Name("elements"),
                                                                            ctx: Load,
                                                                        },
                                                                    ),
                                                                    arguments: Arguments {
                                                                        range: 96..99,
                                                                        node_index: NodeIndex(None),
                                                                        args: [
                                                                            Name(
                                                                                ExprName {
                                                                                    node_index: NodeIndex(None),
                                                                                    range: 97..98,
                                                                                    id: Name("n"),
                                                                                    ctx: Load,
                                                                                },
                                                                            ),
                                                                        ],
                                                                        keywords: [],
                                                                    },
                                                                },
                                                            ),
                                                            ifs: [],
                                                            is_async: true,
                                                        },
                                                    ],
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 101..124,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 111..112,
                                                            id: Name("n"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Call(
                                                        ExprCall {
                                                            node_index: NodeIndex(None),
                                                            range: 116..124,
                                                            func: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 116..121,
                                                                    id: Name("range"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            arguments: Arguments {
                                                                range: 121..124,
                                                                node_index: NodeIndex(None),
                                                                args: [
                                                                    NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            node_index: NodeIndex(None),
                                                                            range: 122..123,
                                                                            value: Int(
                                                                                3,
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                                keywords: [],
                                                            },
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: true,
                                                },
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
